test/classes/deitz/class-numbered/class1-old.good
class1-old.chpl:6: warning: unnecessary type construction call
class1-old.chpl:1: note: 'foo' has no generic fields
class1-old.chpl:6: note: remove the ()
class1-old.chpl:6: error: illegal assignment of type to value
